# Generated by Django 6.0 on 2026-01-23 17:23

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Driver',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('driver_first_name', models.CharField(max_length=50)),
                ('driver_last_name', models.CharField(max_length=50)),
                ('driver_email', models.EmailField(max_length=254, unique=True)),
                ('driver_phone_number', models.CharField(max_length=20)),
                ('driver_address', models.TextField()),
                ('driver_license_number', models.CharField(max_length=50, unique=True)),
                ('driver_availability', models.BooleanField(default=True)),
                ('driver_hire_date', models.DateField()),
                ('driver_active', models.BooleanField(default=True)),
                ('driver_created_at', models.DateTimeField(auto_now_add=True)),
            ],
        ),
    ]
