# Generated by Django 6.0 on 2026-01-23 17:23

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('Package', '0001_initial'),
        ('Shipment', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Incident',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('incident_type', models.CharField(choices=[('delay', 'Delay'), ('loss', 'Loss'), ('damage', 'Damage'), ('technical', 'Technical Issue'), ('accident', 'Accident'), ('other', 'Other')], max_length=50)),
                ('incident_severity', models.CharField(choices=[('low', 'Low'), ('medium', 'Medium'), ('high', 'High'), ('critical', 'Critical')], default='medium', max_length=50)),
                ('incident_description', models.TextField()),
                ('incident_location', models.CharField(blank=True, max_length=200)),
                ('incident_date', models.DateTimeField()),
                ('is_resolved', models.BooleanField(default=False)),
                ('resolution_notes', models.TextField(blank=True)),
                ('shipment', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='Shipment.shipment')),
                ('tour', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='Package.package')),
            ],
        ),
    ]
