# Generated by Django 6.0 on 2026-01-23 17:23

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('Shipment', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Package',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('package_weight', models.DecimalField(decimal_places=2, max_digits=10)),
                ('package_volume', models.CharField(max_length=100)),
                ('package_description', models.TextField()),
                ('package_value', models.DecimalField(decimal_places=2, max_digits=10)),
                ('package_created_at', models.DateTimeField(auto_now_add=True)),
                ('shipment', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='packages', to='Shipment.shipment')),
            ],
        ),
    ]
