# Generated by Django 6.0 on 2026-01-23 17:23

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('Invoice', '0001_initial'),
        ('Package', '0001_initial'),
        ('Profiles', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Reclaim',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('reclaim_number', models.CharField(max_length=20, unique=True)),
                ('reclaim_type', models.CharField(choices=[('delivery', 'Delivery Issue'), ('billing', 'Billing Issue'), ('service', 'Service Quality'), ('damage', 'Damaged Goods'), ('delay', 'Delivery Delay'), ('other', 'Other')], max_length=50)),
                ('reclaim_description', models.TextField()),
                ('reclaim_date', models.DateField()),
                ('reclaim_resolution_date', models.DateField(blank=True, null=True)),
                ('reclaim_status', models.CharField(choices=[('open', 'Open'), ('in_progress', 'In Progress'), ('resolved', 'Resolved'), ('closed', 'Closed')], default='open', max_length=50)),
                ('reclaim_priority', models.CharField(choices=[('high', 'High'), ('medium', 'Medium'), ('low', 'Low')], default='low', max_length=50)),
                ('reclaim_created_at', models.DateTimeField(auto_now_add=True)),
                ('agent', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='Profiles.agent')),
            ],
        ),
        migrations.CreateModel(
            name='Reclaim_Invoice',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('reclaim_invoice_created_at', models.DateTimeField(auto_now_add=True)),
                ('invoice', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='Invoice.invoice')),
                ('reclaim', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='Reclaims.reclaim')),
            ],
        ),
        migrations.CreateModel(
            name='Reclaim_Packages',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('reclaim_packages_created_at', models.DateTimeField(auto_now_add=True)),
                ('package', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='Package.package')),
                ('reclaim', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='Reclaims.reclaim')),
            ],
        ),
    ]
