# Generated by Django 6.0 on 2026-01-23 17:23

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Destination',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('destination_city', models.CharField(max_length=50)),
                ('destination_state', models.CharField(max_length=50)),
                ('destination_country', models.CharField(max_length=50)),
                ('destination_base_fare', models.DecimalField(decimal_places=2, max_digits=10)),
                ('destination_created_at', models.DateTimeField(auto_now_add=True)),
            ],
        ),
        migrations.CreateModel(
            name='ServiceType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('service_type_name', models.CharField(max_length=50)),
                ('service_type_description', models.TextField()),
                ('service_type_volume_surcharge', models.DecimalField(decimal_places=2, max_digits=10)),
                ('service_type_weight_surcharge', models.DecimalField(decimal_places=2, max_digits=10)),
                ('service_type_priority_level', models.CharField(choices=[('high', 'High'), ('medium', 'Medium'), ('low', 'Low')], default='medium', max_length=50)),
                ('service_type_created_at', models.DateTimeField(auto_now_add=True)),
            ],
        ),
    ]
